--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
+  scrollbar-width: thin;
+  scrollbar-color: var(--scroll-bar-color) var(--scroll-bar-bg-color);
 }
 
 html {
@@ -26,5 +28,27 @@ button {
 
 .app {
   display: grid;
-  grid-template-columns: 230px auto;
+  grid-template-columns: 250px auto;
+}
+
+:root {
+  --scroll-bar-color: #c5c5c5;
+  --scroll-bar-bg-color: #f6f6f6;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--scroll-bar-bg-color);
+}
+
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-bar-color);
+  border-radius: 20px;
+  border: 1px solid var(--scroll-bar-bg-color);
 }
