--- a/src/components/navigation/sidenav.css
+++ b/src/components/navigation/sidenav.css
@@ -5,15 +5,26 @@ nav {
 
 nav>div {
     position: fixed;
-    max-width: 230px;
+    max-width: 250px;
     background: inherit;
+    overflow-y: scroll;
     min-height: 100%;
+    max-height: 100%;
     width: 100%;
-    padding: 2rem 1rem;
+    padding: 3rem 1.5rem;
+}
+
+nav>div>img {
+    display: block;
+    margin: auto;
 }
 
 nav ul {
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 3rem;
 }
 
 nav ul li {
@@ -23,7 +34,63 @@ nav ul li {
 
 nav ul li a {
     width: 100%;
-    color: white;
+    color: rgba(255, 255, 255, 0.7);
     display: flex;
     align-items: center;
+    gap: 10px;
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: 4px;
+    padding: .7rem 1rem;
+}
+
+nav ul li .active {
+    background: #299D91;
+    color: #ffff;
+}
+
+nav .logout {
+    background: rgba(255, 255, 255, 0.08);
+    border: none;
+    color: #ffff;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+    border-radius: 4px;
+    padding: .7rem 1rem;
+    width: 100%;
+    margin-top: 6rem;
+}
+
+nav .profile {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    border-top: 1px solid rgba(111, 110, 110, 0.7);
+    padding: 2rem 0;
+    margin-top: 3rem;
+}
+
+nav .profile .dp {
+    height: 40px;
+}
+
+nav .profile .options {
+    display: inline-block;
+    margin-left: auto;
+    cursor: pointer;
+}
+
+nav .profile .name {
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+nav .profile .view {
+    font-size: .9rem;
+    color: rgba(255, 255, 255, 0.7);
+    margin-top: 5px;
 }
