--- a/src/Pages/overview/components/plans.css
+++ b/src/Pages/overview/components/plans.css
@@ -1,19 +1,27 @@
-.total_balance {
-    max-width: 400px;
+.total_balance,
+.goals {
+    flex-basis: 250px;
+    flex-grow: 1;
 }
 
-.total_balance>div {
+.total_balance>div,
+.goals>div {
     background: #FFFFFF;
     box-shadow: 0px 20px 25px rgba(76, 103, 100, 0.1);
     border-radius: 8px;
     padding: 1rem;
     margin-top: .7rem;
+    /* height: 100%; */
 }
 
-.total_balance h4 {
+.total_balance h4,
+.goals h4 {
     color: #191919;
     font-size: 1.5rem;
     font-weight: 700;
+    display: flex;
+    gap: 8px;
+    align-items: center;
 }
 
 .total_balance .balance {
@@ -28,7 +36,6 @@
     color: #525256;
     font-size: .95rem;
     font-weight: 600;
-    align-items: center;
 }
 
 .total_balance .account_type {
@@ -73,4 +80,11 @@
 .total_balance .navigation>div button:nth-child(1) {
     background-color: #299D91;
     transform: scale(1.05);
+}
+
+
+/* goals */
+
+.goals {
+    flex-basis: 250px;
 }
