--- a/src/Pages/overview/overview.css
+++ b/src/Pages/overview/overview.css
@@ -13,3 +13,8 @@
     justify-content: space-between;
     gap: 1.5rem;
 }
+
+.overview_revenues>section {
+    flex-basis: 250px;
+    flex-grow: 1;
+}
