--- a/src/components/navigation/sidenav.css
+++ b/src/components/navigation/sidenav.css
@@ -5,13 +5,19 @@ nav {
 
 nav>div {
     position: fixed;
-    max-width: 280px;
+    max-width: 250px;
     background: inherit;
     overflow-y: scroll;
     min-height: 100%;
     max-height: 100%;
     width: 100%;
     padding: 3rem 1.5rem;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+nav>div::-webkit-scrollbar {
+    display: none;
 }
 
 nav>div>img {
@@ -24,7 +30,7 @@ nav ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 
 nav li {
@@ -71,7 +77,7 @@ nav .logout {
     border-radius: 4px;
     padding: .7rem 1rem;
     width: 100%;
-    margin-top: 6rem;
+    margin-top: 4rem;
 }
 
 nav .profile {
