--- a/src/Pages/overview/overview.css
+++ b/src/Pages/overview/overview.css
@@ -1,5 +1,5 @@
 .overview {
-    padding: 1rem;
+    padding: 1rem 1rem 3rem 1rem;
 }
 
 .overview h3 {
@@ -11,10 +11,13 @@
 .overview_revenues {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 1.5rem;
 }
 
 .overview_revenues>section {
-    flex-basis: 250px;
+    flex-basis: 320px;
     flex-grow: 1;
+    max-width: 400px;
+    margin: auto;
 }
