--- a/src/Pages/overview/components/statistics/transaction.css
+++ b/src/Pages/overview/components/statistics/transaction.css
@@ -1,15 +1,18 @@
-.overview_transaction {
+.recent_transaction {
     max-width: 400px;
     margin: auto;
+    flex-grow: 1;
+    flex-basis: 320px;
 }
 
-.overview_transaction header {
+.recent_transaction header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
 }
 
-.overview_transaction header button {
+.recent_transaction header button {
     border: none;
     background: transparent;
     font-size: .85rem;
@@ -20,14 +23,14 @@
     gap: 5px;
 }
 
-.overview_transaction hgroup {
+.recent_transaction hgroup {
     display: flex;
     justify-content: space-between;
     gap: .5rem;
     margin: 0 auto 1rem auto;
 }
 
-.overview_transaction hgroup button {
+.recent_transaction hgroup button {
     border: none;
     background: transparent;
     color: #525256;
@@ -37,12 +40,12 @@
     padding: 0 .5rem .5rem .5rem;
 }
 
-.overview_transaction hgroup .current {
+.recent_transaction hgroup .current {
     color: #299D91;
     border-bottom: 2px solid #299D91;
 }
 
-.overview_transaction .main {
+.recent_transaction .main {
     background: #FFFFFF;
     box-shadow: 0px 20px 25px rgba(76, 103, 100, 0.1);
     border-radius: 8px;
@@ -50,30 +53,102 @@
     margin-top: .7rem;
 }
 
-.overview_transaction .items {
+.recent_transaction .items {
     display: flex;
     gap: 10px;
     align-items: center;
     padding: 1.2rem 0;
 }
 
-.overview_transaction h5 {
+.recent_transaction h5 {
     font-size: 1rem;
     color: #191919;
     margin-bottom: 3px;
 }
 
-.overview_transaction h6 {
+.recent_transaction h6 {
     font-size: 1rem;
     color: #525256;
     margin-bottom: 3px;
 }
 
-.overview_transaction p {
+.recent_transaction p {
     font-size: .8rem;
     color: #9F9F9F;
 }
 
-.overview_transaction .items>div:nth-child(3) {
+.recent_transaction .items>div:nth-child(3) {
     margin-left: auto;
+}
+
+
+/* Statistics */
+
+.overview_statistics {
+    max-width: 800px;
+    margin: auto;
+}
+
+.overview_statistics .graph {
+    width: 100%;
+    max-width: 100%;
+    display: block;
+    margin-top: 1rem;
+}
+
+.overview_statistics>div {
+    background: #FFFFFF;
+    box-shadow: 0px 20px 25px rgba(76, 103, 100, 0.1);
+    border-radius: 8px;
+    padding: 1rem;
+    margin-top: .7rem;
+}
+
+.overview_statistics h4 {
+    display: flex;
+    align-items: center;
+    gap: .6rem;
+    font-size: 1rem;
+    color: #191919;
+}
+
+.overview_statistics_filter {
+    display: flex;
+    justify-content: space-between;
+    row-gap: 1rem;
+    column-gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.overview_statistics_filter>div {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.overview_statistics_filter button {
+    border: none;
+    color: #525256;
+    font-size: .8rem;
+    font-weight: 500;
+    display: inline-flex;
+    align-items: center;
+    gap: .5rem;
+    background-color: transparent;
+}
+
+.overview_statistics_filter button:nth-child(1) span {
+    display: inline-block;
+    height: 7px;
+    width: .9rem;
+    background-color: #299D91;
+    border-radius: 2px;
+}
+
+.overview_statistics_filter button:nth-child(2) span {
+    display: inline-block;
+    height: 7px;
+    width: .9rem;
+    background-color: #adaaaa;
+    border-radius: 2px;
 }
