--- a/src/Pages/overview/overview.css
+++ b/src/Pages/overview/overview.css
@@ -4,7 +4,7 @@
 
 .overview h3 {
     color: #878787;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 400;
 }
 
@@ -24,4 +24,12 @@
 
 .overview .transactions {
     margin-top: 1.5rem;
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.overview .transactions .stats {
+    flex-grow: 10;
+    /* flex-basis: 650px; */
 }
