--- a/src/Pages/overview/components/statistics/transaction.css
+++ b/src/Pages/overview/components/statistics/transaction.css
@@ -1,7 +1,7 @@
 .recent_transaction {
     max-width: 400px;
-    margin: auto;
-    flex-grow: 1;
+    margin: 0 auto;
+    flex-grow: 2;
     flex-basis: 320px;
 }
 
@@ -86,6 +86,7 @@
 
 .overview_statistics {
     max-width: 800px;
+    width: 100%;
     margin: auto;
 }
 
