--- a/src/Pages/overview/overview.css
+++ b/src/Pages/overview/overview.css
@@ -26,13 +26,13 @@
     margin-top: 1.5rem;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
     gap: 1.5rem;
     flex-wrap: wrap;
 }
 
 .overview .transactions .stats {
-    flex-grow: 2;
+    flex-grow: 3;
+    flex-basis: 550px;
     margin: 0 auto;
     display: grid;
     gap: 1rem;
