--- a/src/Pages/bills/bills.css
+++ b/src/Pages/bills/bills.css
@@ -1,47 +1,58 @@
-.bill{
+.bills {
     padding: 2rem;
 }
-.bill h4{
-    padding: 1rem ;
+
+.bills h4 {
+    padding: 1rem;
 }
-.bill-intro{
+
+.bill-intro {
     background-color: white;
     padding: 2rem;
     border-radius: 10px;
 }
-.bill-intro table{
+
+.bill-intro table {
     width: 100%;
 }
-.bill-intro th{
-    border-bottom:1px solid #9F9F9F;
+
+.bill-intro th {
+    border-bottom: 1px solid #9F9F9F;
 }
-.bill-intro h5{
- color:#191919;
- margin: 1rem 0;
+
+.bill-intro h5 {
+    color: #191919;
+    margin: 1rem 0;
 }
-.bill td{
+
+.bills td {
     padding: 2rem;
 }
-.bill td span{
-    color:#9F9F9F;
+
+.bills td span {
+    color: #9F9F9F;
     font-size: .8rem;
     padding: 2rem 0;
 }
-.bill .number{
+
+.bills .number {
     color: black;
 }
-.bill p{
-    color:#9F9F9F;
+
+.bills p {
+    color: #9F9F9F;
     font-size: .9rem;
 }
-.month{
-padding: .5rem 1rem;
-border: none;
+
+.month {
+    padding: .5rem 1rem;
+    border: none;
 }
-.amount{
+
+.amount {
     border: 1px solid #E8E8E8;
     background-color: white;
-    color:#191919;
+    color: #191919;
     font-size: 18px;
     padding: .6rem .8rem;
     border-radius: 8px;
