--- a/src/Pages/overview/components/goals/plans.css
+++ b/src/Pages/overview/components/goals/plans.css
@@ -1,5 +1,5 @@
 .total_balance>div,
-.goals>div,
+.overview__goals>div,
 .overview__bills {
     background: #FFFFFF;
     box-shadow: 0px 20px 25px rgba(76, 103, 100, 0.1);
@@ -10,7 +10,7 @@
 }
 
 .total_balance h4,
-.goals h4 {
+.overview__goals h4 {
     color: #191919;
     font-size: 1.5rem;
     font-weight: 700;
@@ -81,7 +81,7 @@
 
 /* goals */
 
-.goals .target {
+.overview__goals .target {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -121,6 +121,7 @@
     font-size: .8rem;
     font-weight: 600;
     margin-top: .55rem;
+    text-align: center;
 }
 
 /* bills */
