--- a/src/Pages/balances/balances.css
+++ b/src/Pages/balances/balances.css
@@ -1,6 +1,7 @@
-.balances h4 {
+.balances h3 {
     color: #878787;
-    margin-top: 1rem;
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 
 .balances * {
