--- a/src/Pages/transactions/transaction.css
+++ b/src/Pages/transactions/transaction.css
@@ -1,31 +1,42 @@
 .transaction {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem 3rem 1rem;
 }
+
 .transaction .transacted {
   border-radius: 16px;
-  background-color: white;
+  background: white;
   padding: 0 0 0.8rem 0;
+  overflow-x: scroll;
+  width: 100%;
 }
+
 .transaction .main .current {
   color: #299d91;
   border-bottom: 2px solid #299d91;
 }
+
 .transaction h2 {
   color: #878787;
   font-weight: 400;
   font-size: 1.3rem;
+  margin-bottom: 1.5rem;
 }
+
 .transaction .main {
   color: #878787;
   margin: 1rem 0;
 }
+
 .transaction .main button {
   margin: 0 1rem;
   font-size: 1rem;
   background-color: transparent;
   color: #878787;
   border: none;
+  font-weight: 600;
+  padding-bottom: .5rem;
 }
+
 .transaction .items {
   padding: 0.5rem 1rem;
   gap: 0.7rem;
@@ -34,8 +45,8 @@
 }
 
 .transaction table {
-  min-width: 1000px;
   width: 100%;
+  min-width: 800px;
   padding: 2rem 1rem 0 1rem;
 }
 
@@ -46,16 +57,18 @@
   font-size: 1rem;
   color: black;
 }
+
 .transaction th:nth-child(1) {
   text-align: left;
-  padding: 0 1rem;
+  padding: 0.2rem 0 1rem 1rem;
 }
+
 .transaction td {
   border-bottom: 1px solid #d2d2d240;
   text-align: center;
   color: #878787;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .transaction table span {
@@ -63,8 +76,9 @@
 }
 
 .transaction td:nth-child(1),
-.transaction  td:nth-child(5) {
-  color: black;
+.transaction td:nth-child(5) {
+  color: #191919;
+  font-weight: 700;
 }
 
 .transaction h6 {
