--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@ button {
   grid-template-columns: 250px auto;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 @media(max-width: 650px) {
   .app {
     grid-template-columns: 1fr;
