--- a/src/components/navigation/sidenav.css
+++ b/src/components/navigation/sidenav.css
@@ -135,7 +135,7 @@ nav .profile .view {
         display: none;
     }
 
-    nav>div>img {
+    nav .logo {
         display: none;
         margin: auto;
     }
