--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@ button {
   grid-template-columns: 250px auto;
 }
 
+.auth {
+  grid-template-columns: 1fr !important;
+}
+
 main {
   overflow-x: hidden;
 }
