--- a/src/Pages/overview/components/statistics/transaction.css
+++ b/src/Pages/overview/components/statistics/transaction.css
@@ -88,13 +88,11 @@
     max-width: 800px;
     width: 100%;
     margin: auto;
+    overflow-x: scroll;
 }
 
-.overview_statistics .graph {
-    width: 100%;
-    max-width: 100%;
-    display: block;
-    margin-top: 1rem;
+.overview_statistics::-webkit-scrollbar {
+    display: none;
 }
 
 .overview_statistics>div {
@@ -103,6 +101,18 @@
     border-radius: 8px;
     padding: 1rem;
     margin-top: .7rem;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    min-width: 650px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.overview_statistics .graph {
+    width: 100%;
+    max-width: 100%;
+    display: block;
+    margin-top: 1rem;
 }
 
 .overview_statistics h4 {
