--- a/src/Pages/overview/components/statistics/transaction.css
+++ b/src/Pages/overview/components/statistics/transaction.css
@@ -1,8 +1,6 @@
 .recent_transaction {
-    max-width: 400px;
-    margin: 0 auto;
-    flex-grow: 1;
-    flex-basis: 320px;
+    display: flex;
+    flex-direction: column;
 }
 
 .recent_transaction header {
@@ -51,25 +49,26 @@
     border-radius: 8px;
     padding: 1rem;
     margin-top: .7rem;
+    flex-grow: 1;
 }
 
 .recent_transaction .items {
     display: flex;
     gap: 10px;
     align-items: center;
-    padding: 1.2rem 0;
+    padding: 1.4rem 0;
 }
 
 .recent_transaction h5 {
     font-size: 1rem;
     color: #191919;
-    margin-bottom: 3px;
+    margin-bottom: 6px;
 }
 
 .recent_transaction h6 {
     font-size: 1rem;
     color: #525256;
-    margin-bottom: 3px;
+    margin-bottom: 6px;
 }
 
 .recent_transaction p {
