--- a/src/Pages/overview/overview.css
+++ b/src/Pages/overview/overview.css
@@ -9,25 +9,37 @@
 }
 
 .overview_revenues {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-between;
-    flex-wrap: wrap;
     gap: 1.5rem;
 }
 
 .overview_revenues>section {
-    flex-basis: 320px;
-    flex-grow: 1;
-    max-width: 400px;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+@media(max-width: 1300px) {
+    /* .overview_revenues {
+        display: flex;
+        justify-content: center;
+    }
+
+    .overview_revenues>section {
+        flex-basis: 320px;
+        flex-grow: 1;
+        max-width: 450px;
+        margin: 0 auto;
+    } */
 }
 
 .overview .transactions {
-    margin-top: 1.5rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     justify-content: space-between;
     gap: 1.5rem;
-    flex-wrap: wrap;
+    margin-top: 1.5rem;
 }
 
 .overview .transactions .stats {
