--- a/src/Pages/balances/balances.css
+++ b/src/Pages/balances/balances.css
@@ -4,10 +4,6 @@
     font-weight: 400;
 }
 
-.balances * {
-    /* border: 1px solid red; */
-}
-
 .balances h5 {
     font-size: 1rem;
     color: #666666;
@@ -59,6 +55,7 @@
     justify-content: space-between;
     border-bottom: 1px solid #D2D2D2;
     padding: 0 0 .8rem 0;
+    gap: 1rem;
 }
 
 .cards {
